--- a/puc_python_for_data_science.ipynb
+++ b/puc_python_for_data_science.ipynb
@@ -61,7 +61,8 @@
       "source": [
         "# Ferramentas Usadas:\n",
         "- Jupyter Lab \n",
-        "- Pandas"
+        "- Pandas\n",
+        "- matplotlib"
       ]
     },
     {
@@ -86,9 +87,10 @@
       },
       "source": [
         "import numpy as np\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -363,34 +365,22 @@
       "metadata": {
         "id": "e66NTIFsZaih",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "82d2ebc3-d444-4c26-ab3b-607d8c23def3"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "86ed6025-44be-4229-f583-90606ad4f9c5"
       },
       "source": [
         "orders = pd.read_csv('../content/orders.csv')\n",
         "orders.columns = ['id', 'user_id', 'avaliacoes', 'numero_pedido', 'order_dow', 'hora_pedido_dia', 'dias_desde_pedido_previo']\n",
         "orders.head()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "        id  user_id avaliacoes  numero_pedido  order_dow  hora_pedido_dia  \\\n",
-              "0  2539329        1      prior              1          2                8   \n",
-              "1  2398795        1      prior              2          3                7   \n",
-              "2   473747        1      prior              3          3               12   \n",
-              "3  2254736        1      prior              4          4                7   \n",
-              "4   431534        1      prior              5          4               15   \n",
-              "\n",
-              "   dias_desde_pedido_previo  \n",
-              "0                       NaN  \n",
-              "1                      15.0  \n",
-              "2                      21.0  \n",
-              "3                      29.0  \n",
-              "4                      28.0  "
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -425,9 +415,9 @@
               "      <td>2539329</td>\n",
               "      <td>1</td>\n",
               "      <td>prior</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>8</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>8.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -435,9 +425,9 @@
               "      <td>2398795</td>\n",
               "      <td>1</td>\n",
               "      <td>prior</td>\n",
-              "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>7</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>7.0</td>\n",
               "      <td>15.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -445,9 +435,9 @@
               "      <td>473747</td>\n",
               "      <td>1</td>\n",
               "      <td>prior</td>\n",
-              "      <td>3</td>\n",
-              "      <td>3</td>\n",
-              "      <td>12</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>12.0</td>\n",
               "      <td>21.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -455,9 +445,9 @@
               "      <td>2254736</td>\n",
               "      <td>1</td>\n",
               "      <td>prior</td>\n",
-              "      <td>4</td>\n",
-              "      <td>4</td>\n",
-              "      <td>7</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>7.0</td>\n",
               "      <td>29.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -465,14 +455,24 @@
               "      <td>431534</td>\n",
               "      <td>1</td>\n",
               "      <td>prior</td>\n",
-              "      <td>5</td>\n",
-              "      <td>4</td>\n",
-              "      <td>15</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>15.0</td>\n",
               "      <td>28.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
+            ],
+            "text/plain": [
+              "        id  user_id  ... hora_pedido_dia  dias_desde_pedido_previo\n",
+              "0  2539329        1  ...             8.0                       NaN\n",
+              "1  2398795        1  ...             7.0                      15.0\n",
+              "2   473747        1  ...            12.0                      21.0\n",
+              "3  2254736        1  ...             7.0                      29.0\n",
+              "4   431534        1  ...            15.0                      28.0\n",
+              "\n",
+              "[5 rows x 7 columns]"
             ]
           },
           "metadata": {
@@ -811,33 +811,21 @@
       "metadata": {
         "id": "DIM3u5b-Zaiw",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "bf95f3ba-1ada-4c5f-a631-bfcf31bb5e3d"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "bce8f628-21bb-47b3-a1d5-ebcdfb01bc6f"
       },
       "source": [
         "products = pd.read_csv('../content/products.csv')\n",
         "products.head()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   product_id                                       product_name  aisle_id  \\\n",
-              "0           1                         Chocolate Sandwich Cookies        61   \n",
-              "1           2                                   All-Seasons Salt       104   \n",
-              "2           3               Robust Golden Unsweetened Oolong Tea        94   \n",
-              "3           4  Smart Ones Classic Favorites Mini Rigatoni Wit...        38   \n",
-              "4           5                          Green Chile Anytime Sauce         5   \n",
-              "\n",
-              "   department_id  \n",
-              "0             19  \n",
-              "1             13  \n",
-              "2              7  \n",
-              "3              1  \n",
-              "4             13  "
-            ],
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
@@ -902,12 +890,22 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>"
+            ],
+            "text/plain": [
+              "   product_id  ... department_id\n",
+              "0           1  ...            19\n",
+              "1           2  ...            13\n",
+              "2           3  ...             7\n",
+              "3           4  ...             1\n",
+              "4           5  ...            13\n",
+              "\n",
+              "[5 rows x 4 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -1526,14 +1524,267 @@
       "metadata": {
         "id": "1HiGOd4RZajA",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "357bbf6c-0734-4341-a387-afb44a63a249"
       },
       "source": [
         "ord_prod_prior = pd.read_csv('../content/order_products_prior.csv')\n",
         "ord_prod_prior.head()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>add_to_cart_order</th>\n",
+              "      <th>reordered</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2</td>\n",
+              "      <td>33120</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>28985</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>9327</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2</td>\n",
+              "      <td>45918</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2</td>\n",
+              "      <td>30035</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   order_id  product_id  add_to_cart_order  reordered\n",
+              "0         2       33120                1.0        1.0\n",
+              "1         2       28985                2.0        1.0\n",
+              "2         2        9327                3.0        0.0\n",
+              "3         2       45918                4.0        1.0\n",
+              "4         2       30035                5.0        0.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SSF3T2Sfbky8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "28653516-30ad-458a-e9ac-880b0094cadc"
+      },
+      "source": [
+        "\"\"\"\n",
+        "Merge com Entidades relacionadas (Aqui poderiamos ir mais alem pois products tem relacionamento com outras tabelas!)\n",
+        "\"\"\"\n",
+        "ord_prod_merge = ord_prod_prior.merge(products, left_on='product_id', right_on='product_id').merge(orders, left_on=\"order_id\", right_on=\"id\")\n",
+        "ord_prod_merge.head()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>add_to_cart_order</th>\n",
+              "      <th>reordered</th>\n",
+              "      <th>product_name</th>\n",
+              "      <th>aisle_id</th>\n",
+              "      <th>department_id</th>\n",
+              "      <th>id</th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>avaliacoes</th>\n",
+              "      <th>numero_pedido</th>\n",
+              "      <th>order_dow</th>\n",
+              "      <th>hora_pedido_dia</th>\n",
+              "      <th>dias_desde_pedido_previo</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>120</td>\n",
+              "      <td>33120</td>\n",
+              "      <td>13.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Organic Egg Whites</td>\n",
+              "      <td>86</td>\n",
+              "      <td>16</td>\n",
+              "      <td>120</td>\n",
+              "      <td>23750</td>\n",
+              "      <td>prior</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>120</td>\n",
+              "      <td>41273</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Broccoli Florets</td>\n",
+              "      <td>123</td>\n",
+              "      <td>4</td>\n",
+              "      <td>120</td>\n",
+              "      <td>23750</td>\n",
+              "      <td>prior</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>120</td>\n",
+              "      <td>40545</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Berry Medley</td>\n",
+              "      <td>116</td>\n",
+              "      <td>1</td>\n",
+              "      <td>120</td>\n",
+              "      <td>23750</td>\n",
+              "      <td>prior</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>120</td>\n",
+              "      <td>28204</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Organic Fuji Apple</td>\n",
+              "      <td>24</td>\n",
+              "      <td>4</td>\n",
+              "      <td>120</td>\n",
+              "      <td>23750</td>\n",
+              "      <td>prior</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>120</td>\n",
+              "      <td>26604</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>Organic Blackberries</td>\n",
+              "      <td>24</td>\n",
+              "      <td>4</td>\n",
+              "      <td>120</td>\n",
+              "      <td>23750</td>\n",
+              "      <td>prior</td>\n",
+              "      <td>11.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>8.0</td>\n",
+              "      <td>10.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   order_id  product_id  ...  hora_pedido_dia  dias_desde_pedido_previo\n",
+              "0       120       33120  ...              8.0                      10.0\n",
+              "1       120       41273  ...              8.0                      10.0\n",
+              "2       120       40545  ...              8.0                      10.0\n",
+              "3       120       28204  ...              8.0                      10.0\n",
+              "4       120       26604  ...              8.0                      10.0\n",
+              "\n",
+              "[5 rows x 14 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
     }
   ]
 }
