--- a/EstatisticaPOS_trab_01.ipynb
+++ b/EstatisticaPOS_trab_01.ipynb
@@ -10,8 +10,7 @@
         "MahlRKW6vT7w"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyD3bRmtKL1MgqbIulPoSP",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNq7mwbh3vfvzXGrGgRr5lT"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/titilomt/data_science_puc_projects/blob/master/EstatisticaPOS_trab_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -1248,7 +1237,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 3570
         },
         "outputId": "b85a603c-0312-4f13-a3d5-c682b40737b5"
       },
@@ -1500,7 +1489,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Conclusões\n",
+        "### Conclusão\n",
         "\n",
         "Após aplicarmos todas as probabilidades das bandas criadas após o ano de 2000, temos uma taxa muito baixa de criação onde:\n",
         "'Probabilidade do estilo Black', 7%   |\n",
